--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^2.0.9",
     "core-js": "^3.8.3",
+    "element-plus": "^2.2.15",
+    "element-ui": "^2.15.9",
+    "layers-design-system": "^1.2.0",
     "vue": "^3.2.13"
   },
   "devDependencies": {
