--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@element-plus/icons-vue": "^2.0.9",
     "core-js": "^3.8.3",
+    "dayjs": "^1.11.5",
     "element-plus": "^2.2.15",
     "element-ui": "^2.15.9",
     "layers-design-system": "^1.2.0",
