--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "element-plus": "^2.2.15",
     "element-ui": "^2.15.9",
     "layers-design-system": "^1.2.0",
-    "vue": "^3.2.13"
+    "vue": "^3.2.13",
+    "vue-router": "4"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
