--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.0.9",
+    "axios": "^0.27.2",
     "core-js": "^3.8.3",
     "dayjs": "^1.11.5",
     "element-plus": "^2.2.15",
