--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "element-ui": "^2.15.9",
     "layers-design-system": "^1.2.0",
     "vue": "^3.2.13",
-    "vue-router": "4"
+    "vue-router": "4",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
