--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "element-plus": "^2.2.15",
     "element-ui": "^2.15.9",
     "layers-design-system": "^1.2.0",
+    "lodash": "^4.17.21",
     "vue": "^3.2.13",
     "vue-router": "4",
     "vuex": "^4.0.2"
